# git_workflow

./: .gitignore  Jenkinsfile  conftest.py  pyproject.toml  test_text.txt
.github/workflows/: github-actions-demo.yml
src/: hello_world.py
src/tests/: test_hello_world.py
