[tool.poetry]
name = "git_workflow"
version = "0.1.0"
description = "Lecture oriented package to show how works CI/CD and git workflow"
authors = ["kobzar91 <taras.dmyterko@levi9.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"
flake8 = "^5.0.4"

[tool.flake8]


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"